; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_ftp.c_ftp_timeleft_accept.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_ftp.c_ftp_timeleft_accept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_easy = type { %struct.TYPE_3__, %struct.TYPE_4__ }
%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i64 }
%struct.curltime = type { i32 }

@DEFAULT_ACCEPT_TIMEOUT = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.Curl_easy*)* @ftp_timeleft_accept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ftp_timeleft_accept(%struct.Curl_easy* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.Curl_easy*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.curltime, align 4
  %7 = alloca %struct.curltime, align 4
  store %struct.Curl_easy* %0, %struct.Curl_easy** %3, align 8
  %8 = load i64, i64* @DEFAULT_ACCEPT_TIMEOUT, align 8
  store i64 %8, i64* %4, align 8
  %9 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %10 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %1
  %15 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %16 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  store i64 %18, i64* %4, align 8
  br label %19

19:                                               ; preds = %14, %1
  %20 = call i32 (...) @Curl_now()
  %21 = getelementptr inbounds %struct.curltime, %struct.curltime* %7, i32 0, i32 0
  store i32 %20, i32* %21, align 4
  %22 = bitcast %struct.curltime* %6 to i8*
  %23 = bitcast %struct.curltime* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %22, i8* align 4 %23, i64 4, i1 false)
  %24 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %25 = load i32, i32* @FALSE, align 4
  %26 = call i64 @Curl_timeleft(%struct.Curl_easy* %24, %struct.curltime* %6, i32 %25)
  store i64 %26, i64* %5, align 8
  %27 = load i64, i64* %5, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %35

29:                                               ; preds = %19
  %30 = load i64, i64* %5, align 8
  %31 = load i64, i64* %4, align 8
  %32 = icmp slt i64 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %29
  %34 = load i64, i64* %5, align 8
  store i64 %34, i64* %4, align 8
  br label %49

35:                                               ; preds = %29, %19
  %36 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %37 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = getelementptr inbounds %struct.curltime, %struct.curltime* %6, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i64 @Curl_timediff(i32 %41, i32 %39)
  %43 = load i64, i64* %4, align 8
  %44 = sub nsw i64 %43, %42
  store i64 %44, i64* %4, align 8
  %45 = load i64, i64* %4, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %48, label %47

47:                                               ; preds = %35
  store i64 -1, i64* %2, align 8
  br label %51

48:                                               ; preds = %35
  br label %49

49:                                               ; preds = %48, %33
  %50 = load i64, i64* %4, align 8
  store i64 %50, i64* %2, align 8
  br label %51

51:                                               ; preds = %49, %47
  %52 = load i64, i64* %2, align 8
  ret i64 %52
}

declare dso_local i32 @Curl_now(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @Curl_timeleft(%struct.Curl_easy*, %struct.curltime*, i32) #1

declare dso_local i64 @Curl_timediff(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
